fix spacing

--- a/src/app/components/deposit-limit-calculator-container/dep-limit-calc/dep-limit-calc.component.scss
+++ b/src/app/components/deposit-limit-calculator-container/dep-limit-calc/dep-limit-calc.component.scss
@@ -23,14 +23,20 @@
 
   &-amount {
     &-title {
-      margin-top: 24px;
-      margin-bottom: 24px;
-      text-align: center;
     }
 
     &-form-inner-container {
       display: grid;
-      gap: 42px;
+      gap: 24px;
+    }
+  }
+
+  &-date,
+  &-amount {
+    &-title {
+      margin-top: 24px;
+      margin-bottom: 24px;
+      text-align: justify;
     }
   }
 }
